--- a/denkovi.ini
+++ b/denkovi.ini
@@ -1,5 +1,6 @@
 [ADDRESS]
 ip = 192.168.1.104
 port = 161
-relay_oid_template = ".1.3.6.1.4.1.42505.9.2.2.X.0."
-r_id_1 = 1
+oid = .1.3.6.1.4.1.42505.9.2.2.33.0.
+power_off = 03
+power_on = 00
